--- a/.github/workflows/snapshot.yaml
+++ b/.github/workflows/snapshot.yaml
@@ -29,7 +29,7 @@ jobs:
         uses: goreleaser/goreleaser-action@v5
         with:
           install-only: true
-          version: v2.2.0
+          version: '~> v2'
 
       - name: Run GoReleaser with CUE
         env:
