--- a/.github/workflows/snapshot.yaml
+++ b/.github/workflows/snapshot.yaml
@@ -21,6 +21,16 @@ jobs:
 
       - name: Setup go
         uses: actions/setup-go@v5
+        with:
+          cache: false
+          go-version: 1.23.2
+
+      - name: Set common go env vars
+        run: |-
+          go env -w GOTOOLCHAIN=local
+
+          # Dump env for good measure
+          go env
 
       - name: Install CUE
         run: go install ./cmd/cue
@@ -29,10 +39,12 @@ jobs:
         uses: goreleaser/goreleaser-action@v5
         with:
           install-only: true
-          version: '~> v2'
+          version: v2.3.2
 
       - name: Run GoReleaser with CUE
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: cue cmd release
+        run: |
+          export CUE_CONFIG_DIR=$(mktemp -d)
+          cue cmd release
         working-directory: ./internal/ci/goreleaser
