--- a/examples/anduin/multi-modules/docker-compose.yaml
+++ b/examples/anduin/multi-modules/docker-compose.yaml
@@ -3,3 +3,6 @@ services:
     image: ghcr.io/project-zot/zot-linux-amd64:v2.1.1
     ports:
       - 5000:5000
+    volumes:
+      - ./docker/config.json:/etc/zot/config.json
+      - ./docker/htpasswd:/etc/zot/htpasswd
